[260112] feat: document 일부 수정, 페이지 일부 수정

--- a/src/main/resources/templates/pages/lesson/create-form.html
+++ b/src/main/resources/templates/pages/lesson/create-form.html
@@ -116,6 +116,7 @@
                         <option value="MATH">수학</option>
                         <option value="KOREAN">국어</option>
                         <option value="ENGLISH">영어</option>
+                        <option value="HISTORY">역사</option>
                         <option value="SCIENCE">과학</option>
                     </select>
                 </label>
