--- a/src/main/resources/templates/pages/lesson/update-form.html
+++ b/src/main/resources/templates/pages/lesson/update-form.html
@@ -119,6 +119,7 @@
                         <option value="MATH" th:selected="${lesson.getSubjects().name()} == 'MATH'">수학</option>
                         <option value="KOREAN" th:selected="${lesson.getSubjects().name()} == 'KOREAN'">국어</option>
                         <option value="ENGLISH" th:selected="${lesson.getSubjects().name()} == 'ENGLISH'">영어</option>
+                        <option value="SCIENCE" th:selected="${lesson.getSubjects().name()} == 'HISTORY'">역사</option>
                         <option value="SCIENCE" th:selected="${lesson.getSubjects().name()} == 'SCIENCE'">과학</option>
                     </select>
                 </label>
