--- a/src/main/resources/templates/pages/booking/booking-window.html
+++ b/src/main/resources/templates/pages/booking/booking-window.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h2>결제 페이지</h2>
-    <input type="hidden" id="amount" name="amount" value="10000">
+
     <input type="hidden" id="studentId" value="1">
+    <input type="hidden" id="scheduleId" value="1">
+    <input type="hidden" id="amount" value="10000">
 
     <button onclick="createPayment()">결제하기</button>
 
