--- a/src/main/resources/templates/pages/lesson/create-form.html
+++ b/src/main/resources/templates/pages/lesson/create-form.html
@@ -195,6 +195,26 @@
             </section>
 
             <section class="input-section">
+                <div class="section-header">[수업 시간]</div>
+
+                <div class="form-group">
+                    <div class="form-group">
+                        <div class="label-row">
+                            <span class="main-label">수업 시간</span>
+                        </div>
+                        <input type="number" id="timePerSession" placeholder="수업 시간 (최소 60분)" class="custom-input">
+                    </div>
+
+                    <div class="form-group">
+                        <div class="label-row">
+                            <span class="main-label">시작 시간</span>
+                        </div>
+                        <input type="datetime-local" id="startTime" class="custom-input">
+                    </div>
+                </div>
+            </section>
+
+            <section class="input-section">
                 <div class="section-header">[수업 소개]</div>
 
                 <div class="form-group">
@@ -229,6 +249,8 @@
         const subjects = document.getElementById('subjects').value;
         const price = document.getElementById('price').value;
         const description = document.getElementById('description').value;
+        const startTime = document.getElementById('startTime').value;
+        const timePerSession = document.getElementById('timePerSession').value;
 
         const mode = document.querySelector('input[name="mode"]:checked').value;
 
@@ -243,13 +265,15 @@
             subjects: subjects,
             mode: mode,
             price: Number(price),
-            description: description
+            description: description,
+            timePerSession: timePerSession
         };
 
         try {
             const response = await axios.post(`/api/lessons?teacherId=${teacherId}`, requestData);
 
             if (response.status === 200) {
+                alert(startTime);
                 alert('수업이 성공적으로 등록되었습니다.');
                 window.location.href = '/lessons/my';
             }
